--- a/package.json
+++ b/package.json
@@ -7,13 +7,18 @@
   },
   "dependencies": {
     "all": "0.0.0",
+    "bcrypt": "^3.0.0",
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "^4.15.5",
+    "fs": "0.0.1-security",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^8.3.0",
     "morgan": "~1.9.0",
     "mysql": "^2.15.0",
-    "serve-favicon": "~2.4.5"
+    "nodemailer": "^4.6.7",
+    "serve-favicon": "~2.4.5",
+    "winston": "^3.0.0"
   }
 }
