--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bcrypt": "^3.0.0",
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
+    "cors": "^2.8.4",
     "debug": "~2.6.9",
     "express": "^4.15.5",
     "fs": "0.0.1-security",
