--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "all": "0.0.0",
     "bcrypt": "^3.0.0",
     "body-parser": "~1.18.2",
+    "connect-multiparty": "^2.1.1",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.4",
     "debug": "~2.6.9",
@@ -18,6 +19,7 @@
     "jsonwebtoken": "^8.3.0",
     "morgan": "~1.9.0",
     "mysql": "^2.15.0",
+    "node-cron": "^1.2.1",
     "nodemailer": "^4.6.7",
     "serve-favicon": "~2.4.5",
     "winston": "^3.0.0"
