--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mysql": "^2.15.0",
     "node-cron": "^1.2.1",
     "nodemailer": "^4.6.7",
+    "request": "^2.87.0",
     "serve-favicon": "~2.4.5",
     "winston": "^3.0.0"
   }
