--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
   "dependencies": {
     "all": "0.0.0",
     "aws-sdk": "^2.300.0",
-    "bcrypt": "^3.0.0",
     "body-parser": "~1.18.2",
     "connect-multiparty": "^2.1.1",
     "cookie-parser": "~1.4.3",
@@ -16,7 +15,8 @@
     "crypto-js": "^3.1.9-1",
     "date-diff": "^0.2.0",
     "debug": "~2.6.9",
-    "express": "^4.15.5",
+    "express": "^4.16.3",
+    "firebase-admin": "^6.0.0",
     "fs": "0.0.1-security",
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.3.0",
