added new firebase config file

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ modules/user/test.js
 modules/user/test2.js
 modules/user/test3.js
 logger.log
+nouvo-android-app-firebase-adminsdk-j1tge-8ee927998c.json
