--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "all": "0.0.0",
     "aws-sdk": "^2.300.0",
-    "body-parser": "~1.18.2",
+    "body-parser": "^1.18.3",
     "connect-multiparty": "^2.1.1",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.4",
