--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "express": "^4.16.3",
     "firebase-admin": "^6.0.0",
     "fs": "0.0.1-security",
-    "jade": "~1.11.0",
     "jsonwebtoken": "^8.3.0",
     "morgan": "~1.9.0",
     "multer": "^1.3.1",
@@ -26,10 +25,12 @@
     "mysql": "^2.15.0",
     "node-cron": "^1.2.1",
     "nodemailer": "^4.6.7",
+    "pug": "^2.0.3",
     "randomstring": "^1.1.5",
     "request": "^2.87.0",
     "serve-favicon": "~2.4.5",
     "sync-each": "^1.0.1",
+    "uglify-js": "^2.6.0",
     "winston": "^3.0.0"
   }
 }
