updated firebase config

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ modules/user/test3.js
 logger.log
 nouvo-android-app-firebase-adminsdk-j1tge-8ee927998c.json
 logger.log
+nouvo-production-1541475714679-firebase-adminsdk-8b3p8-bcd7323a8b.json
