--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-handlebars": "^3.0.0",
     "firebase-admin": "^6.0.0",
     "fs": "0.0.1-security",
+    "jade": "^1.11.0",
     "jsonwebtoken": "^8.3.0",
     "morgan": "~1.9.0",
     "multer": "^1.3.1",
