--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "fs": "0.0.1-security",
     "jade": "^1.11.0",
     "jsonwebtoken": "^8.3.0",
-    "morgan": "~1.9.0",
+    "morgan": "^1.9.1",
     "multer": "^1.3.1",
     "multer-s3": "^2.7.0",
     "mysql": "^2.15.0",
