--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@ logger.log
 nouvo-android-app-firebase-adminsdk-j1tge-8ee927998c.json
 logger.log
 nouvo-production-1541475714679-firebase-adminsdk-8b3p8-bcd7323a8b.json
+app-linux
+app-macos
+app-win.exe
