notifications bug fixing

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ nouvo-production-1541475714679-firebase-adminsdk-8b3p8-bcd7323a8b.json
 app-linux
 app-macos
 app-win.exe
+nouvo-production-1541475714679-firebase-adminsdk-8b3p8-88dbb14487.json
